@@ -7,6 +7,8 @@ Bug numbers are references to bugs in http://www.achievo.org/bugzilla
 Changes in Achievo 1.5
 ----------------------
 + Added New and Edit links to the contract field in projects. [Guido]
++ Added emplyee contract templates [Sandy]
++ Added feedbackmessage after saving userpreferences [Sandy]
 * Fixed problem with displaying non active employees in the project
   team search. (Bug #1561) [Yury]
 * Fixed weekview date display. [Sandy]
